# mneme

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: claude-hook-example.md  com.example.mneme-daemon.plist
eval/: golden.example.json
mneme/: config.py  eval.py  hook_inject.py  hybrid_eval.py  index_chunked.py  rerank_eval.py  substrate_daemon.py  substrate_query.py  supersession_scan.py  sweep.py  vault_sweep.py
producers/: README.md  harness_distill.py  meeting_note.py
